# train

./: .gitignore  Cargo.toml
src/: candle.rs  config.rs  database.rs  deal.rs  dto.rs  main.rs  simulator.rs  stock.rs  trade_state.rs  trader.rs  utils.rs
src/analyse/: simulator.rs
src/data/: candle.rs  candle_sync.rs  database.rs  mod.rs
src/simulator/: candle.rs  database.rs  deal.rs  mod.rs  position.rs  runner.rs  simulator.rs  stock.rs
src/trade/: dto.rs  mod.rs  stock.rs
