[package]
name = "train"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
strum = {version = "0.27.2", features = ["derive"]}
strum_macros = "0.27.2"
envy = "0.4.2"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.11.0-rc.2"
hmac = "0.13.0-rc.2"
reqwest = {version = "0.12.20", features = ["blocking", "json"]}
serde-this-or-that = "0.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
snafu = "0.8.9"
hex = "0.4.3"
serde_json = "1.0.145"
sqlite = "0.37.0"
