[package]
name = "train"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
strum_macros = "0.27.2"
envy = "0.4.2"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0-rc.3"
hmac = "0.13.0-rc.3"
reqwest = {version = "0.12.24", features = ["blocking", "json"]}
chrono = { version = "0.4.42", features = ["serde"] }
snafu = "0.8.9"
hex = "0.4.3"
serde_json = "1.0.145"
